Web img: fixed white gap

--- a/src/scss/layout/_gallery.scss
+++ b/src/scss/layout/_gallery.scss
@@ -16,6 +16,8 @@
 
     & img {
 	//width: 100%;
+	// Removes white gap at bottom of image
+	display: block;
     }
 
     & figcaption {
